modified friends and sellTicket

--- a/sellTicket.html
+++ b/sellTicket.html
@@ -72,6 +72,51 @@
 
 				<!-- The dots/circles -->
 
+			<!-- Main -->
+				<div>
+					<table style="width:60%;
+					margin-left:20%;
+					margin-right:20%;
+					margin-top: 2.0em;
+					text-align: center;">
+						<tr>
+							<th><b>票劵名稱</b></th>
+							<th><b>票劵金額</b></th>
+							<th><b>票劵種類</b></th>
+							<th><b>座位</b></th>
+							<th><b>日期</b></th>
+							<th></th>
+						</tr>
+						<tr>
+							<td><br>蕭敬騰世界巡迴演唱會</td>
+							<td><br>1600</td>
+							<td><br>一般票</td>
+							<td><br>A3/15</td>
+							<td><br>2019 / 01 / 19</td>
+							<td><br><button type="button">購票</button></td>
+						</tr>
+						<tr>
+							<td><br>Ed Sheeran世界巡迴演唱會</td>
+							<td><br>3200</td>
+							<td><br>一般票</td>
+							<td><br>R1/01</td>
+							<td><br>2019 / 07 / 04</td>
+							<td><br><button type="button">購票</button></td>
+						</tr>
+						<tr>
+							<td><br>Eminem世界巡迴演唱會</td>
+							<td><br>2500</td>
+							<td><br>身心障礙票</td>
+							<td><br>I2/58</td>
+							<td><br>2018 / 12 / 16</td>
+							<td><br><button type="button">購票</button></td>
+						</tr>
+					</table>
+					<br>
+					<hr style="border: 0.5px solid rgb(71,71,71); width: 80%; margin-left:10%; margin-right:10% ;" />
+
+				</div>
+
 
 
 			<!-- Footer -->
