--- a/friends.html
+++ b/friends.html
@@ -72,6 +72,35 @@
 
 				<!-- The dots/circles -->
 
+			<!-- Main -->
+				<div>
+					<table style="width:40%;
+					margin-left:30%;
+					margin-right:30%;
+					margin-top: 2.0em;
+					text-align: center;">
+					<caption style="font-size: 2.0em">朋友列表</caption>
+						<tr>
+							<th colspan="2"><br><b>朋友暱稱</b></th>
+						</tr>
+						<tr>
+							<td><br>帥哥崴</td>
+							<td style="text-align:right"><br><button type="button">邀請購票</button></td>
+						</tr>
+						<tr>
+							<td><br>帥哥崴</td>
+							<td style="text-align:right"><br><button type="button">邀請購票</button></td>
+						</tr>
+						<tr>
+							<td><br>帥哥崴</td>
+							<td style="text-align:right"><br><button type="button">邀請購票</button></td>
+						</tr>
+					</table>
+					<br>
+					<hr style="border: 0.5px solid rgb(71,71,71); width: 80%; margin-left:10%; margin-right:10% ;" />
+
+				</div>
+
 
 
 			<!-- Footer -->
